# mtodo

./: .env.example  .gitignore  LICENSE  README.md  app.py  index.html  main.js  pyproject.toml  styles.css  tox.ini
mtodo/: __init__.py  extensions.py  models.py
mtodo/blueprints/: base.py  google.py  todo.py
mtodo/static/: main.js  styles.css
mtodo/templates/: base.html  error.html  index.html  macros.jinja
tests/: conftest.py  test_blueprints.py  test_factory.py  test_models.py
