[project]
name = "mtodo"
version = "0.0.3"
description = "mtodo is a minimal todo web application"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.0",
    "flask-dance>=7.1.0",
    "flask-login>=0.6.3",
    "flask-socketio>=5.5.1",
    "flask-sqlalchemy>=3.1.1",
    "python-dotenv>=1.0.1",
]

[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"
